--- a/package.json
+++ b/package.json
@@ -1,14 +1,29 @@
 {
   "name": "note-taker",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "Simple note taker application using express.js",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "cgwol",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.16.4"
-  }
+    "chalk": "^4.1.0",
+    "express": "^4.16.4",
+    "uuid": "^9.0.0"
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cgwol/Challenge-11-Note-Taker.git"
+  },
+  "bugs": {
+    "url": "https://github.com/cgwol/Challenge-11-Note-Taker/issues"
+  },
+  "homepage": "https://github.com/cgwol/Challenge-11-Note-Taker#readme"
 }
